--- a/app/src/main/res/layout/popup_history.xml
+++ b/app/src/main/res/layout/popup_history.xml
@@ -3,15 +3,30 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="#dddddd"
     android:orientation="vertical" >
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="5dp"
+        android:layout_weight="1"
+        android:gravity="center"
+        android:text="History :: Base"
+        android:textColor="@color/black"
+        android:textSize="24sp"
+        android:textAllCaps="true"
+        android:background="#eeeeee"/>
 
     <ListView
         android:id="@+id/historyList"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:divider="#000000"
+        android:dividerHeight="1dp"
+        android:background="#fefefe"
+        android:layout_margin="1dp"
+        android:paddingHorizontal="5dp"
         >
-
     </ListView>
 
 </LinearLayout>
