--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -1,29 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:showIn="navigation_view">
 
     <group android:checkableBehavior="single">
-        <!--<item
-            android:id="@+id/nav_home"
-            android:icon="@drawable/calculator"
-            android:title="Calculator" />-->
         <item
             android:id="@+id/nav_notation"
-            android:icon="@drawable/ic_menu_camera"
+            android:icon="@drawable/notation"
             android:title="Notation"
             />
         <item
             android:id="@+id/nav_base"
-            android:icon="@drawable/ic_menu_gallery"
+            android:icon="@drawable/base"
             android:title="Base" />
         <item
             android:id="@+id/nav_history"
-            android:icon="@drawable/ic_menu_slideshow"
+            android:icon="@drawable/history"
             android:title="History" />
         <item
             android:id="@+id/nav_theme"
-            android:icon="@drawable/ic_menu_slideshow"
+            android:icon="@drawable/themeicon"
             android:title="Theme" />
     </group>
 </menu>
