--- a/app/src/main/res/layout/popup_history.xml
+++ b/app/src/main/res/layout/popup_history.xml
@@ -7,11 +7,11 @@
 
     <TextView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:layout_margin="5dp"
         android:layout_weight="1"
         android:gravity="center"
-        android:text="History :: Base"
+        android:text="History"
         android:textColor="@color/black"
         android:textSize="24sp"
         android:textAllCaps="true"
