--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-    <!--<item
+    <item
         android:id="@+id/action_history"
         android:icon="@drawable/ic_menu_camera"
-        android:title="History"
-        android:onClick="HistoryPopupBTN"
-        app:showAsAction="always" />-->
+        android:title = ""
+        android:onClick="historyBTN"
+        app:showAsAction="always" />
 </menu>
