--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/action_history"
-        android:icon="@drawable/ic_menu_camera"
+        android:icon="@drawable/history"
         android:title = ""
         android:onClick="historyBTN"
         app:showAsAction="always" />
