--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,11 +7,17 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="gray">#333333</color>
+    <color name="dark_gray">#1a1a1a</color>
 
-    <color name="dim_dark_blue">#263238</color>
+    <color name="white_trans">#c0FFFFFF</color>
+
+    <color name="dim_dark_blue">#10394e</color>
     <color name="dim_grey">#787F82</color>
-    <color name="dim_light_blue">#3B4E57</color>
+    <color name="dim_light_blue">#1c668d</color>
     <color name="dim_orange">#e59400</color>
+    <color name="dim_bluey">#0053a5</color>
+    <color name="dim_dark_bluey">#003973</color>
 
     <color name="enabled">@color/dim_dark_blue</color>
     <color name="disabled">@color/dim_grey</color>
