--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -16,6 +16,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Options"
+        android:fontFamily="sans-serif-medium"
+        android:textSize="20sp"
         android:textColor="@color/white"
         android:textAppearance="@android:style/TextAppearance.Medium" />
 
