--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -33,6 +33,6 @@
         <item
             android:id="@+id/nav_credits"
             android:icon="@drawable/about"
-            android:title="Credits" />
+            android:title="About" />
     </group>
 </menu>
